Fix output overflow and multiple decimal point oversight

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -20,6 +24,7 @@ body {
     flex-direction: column;
     flex: auto;
     padding: 5px;
+    min-width: 0;
 }
 
 .display-panel {
@@ -35,6 +40,10 @@ body {
     font-weight: bold;
     text-align: start;
     background-color: #496400;
+    min-width: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .input {
